mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/impl.stderr
error: use of deprecated associated function `Struct::get_random_number`
  --> tests/failing_no_mass_cfg_attr/impl.rs:16:13
   |
16 |     Struct::get_random_number();
   |             ^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/impl.rs:1:26
   |
1  | #![deny(unused_must_use, deprecated)]
   |                          ^^^^^^^^^^

error: unused return value of `Struct::get_random_number` that must be used
  --> tests/failing_no_mass_cfg_attr/impl.rs:16:5
   |
16 |     Struct::get_random_number();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/impl.rs:1:9
   |
1  | #![deny(unused_must_use, deprecated)]
   |         ^^^^^^^^^^^^^^^
